name:                tg-biobot
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/tg-biobot#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable tg-biobot
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       telegram-api >= 0.4.3.0,
                       http-client >= 0.4.28,
                       http-client-tls >= 0.2.4,
                       servant-client >= 0.7.1,
                       regex-compat >= 0.95.1,
                       text >= 1.2.2.1,
                       HDBC >= 2.4.0.1,
                       HDBC-sqlite3 >= 2.3.3.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tg-biobot
