name:                tg-biobot
version:             0.1.0.0
description:         A Telegram biography bot
homepage:            https://github.com/swordfeng/tg-biobot#readme
license:             GPL-3
license-file:        LICENSE
author:              swordfeng
maintainer:          swordfeng123@gmail.com
copyright:           2016 swordfeng
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable tg-biobot
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       telegram-api == 0.5.1.1,
                       http-client,
                       http-client-tls,
                       servant-client,
                       regex-compat,
                       text,
                       TCache,
                       bytestring,
                       cereal
  default-language:    Haskell2010
  other-modules:       DB, Secret

source-repository head
  type:     git
  location: https://github.com/swordfeng/tg-biobot
